@@ -7,9 +7,9 @@ import jakarta.ws.rs.ForbiddenException;
 import jakarta.ws.rs.InternalServerErrorException;
 import jakarta.ws.rs.NotFoundException;
 import jakarta.ws.rs.WebApplicationException;
-import org.apache.logging.log4j.Logger;
 import org.glassfish.jersey.server.ContainerRequest;
-import org.veupathdb.lib.container.jaxrs.model.User;
+import org.slf4j.Logger;
+import org.veupathdb.lib.container.jaxrs.model.UserInfo;
 import org.veupathdb.lib.container.jaxrs.providers.LogProvider;
 import org.veupathdb.lib.container.jaxrs.providers.UserProvider;
 import org.veupathdb.service.eda.generated.model.DatasetProviderCreateRequest;
@@ -29,7 +29,7 @@ import static org.veupathdb.service.eda.access.service.staff.StaffService.userIs
 
 public class ProviderService
 {
-  static ProviderService instance = new ProviderService();
+  static final ProviderService instance = new ProviderService();
 
   ProviderService() {
   }
@@ -43,7 +43,7 @@ public class ProviderService
    */
   public DatasetProviderCreateResponse createNewProvider(
     final DatasetProviderCreateRequest body,
-    final User user
+    final UserInfo user
   ) {
     log.trace("ProviderService#createNewProvider(DatasetProviderCreateRequest)");
 
@@ -98,7 +98,7 @@ public class ProviderService
     final String datasetId,
     final Long limit,
     final Long offset,
-    final User currentUser
+    final UserInfo currentUser
   ) {
     log.trace("ProviderService#getDatasetProviderList(String, int, int, UserProfile)");
 
@@ -177,7 +177,7 @@ public class ProviderService
     log.trace("ProviderService#userIsManager(Request, String)");
 
     return isUserManager(UserProvider.lookupUser(req)
-      .map(User::getUserId)
+      .map(UserInfo::getUserId)
       .orElseThrow(InternalServerErrorException::new), datasetId);
   }
 
@@ -234,7 +234,7 @@ public class ProviderService
     // WARNING: This cast mess is due to a bug in the JaxRS generator, the type
     // it actually passes up is not the declared type, but a list of linked hash
     // maps instead.
-    final var item = items.get(0);
+    final var item = items.getFirst();
 
     // only allow replace ops
     if (!"replace".equals(item.getOp()))
@@ -272,7 +272,7 @@ public class ProviderService
     final String datasetId,
     final Long limit,
     final Long offset,
-    final User user
+    final UserInfo user
   ) {
     return getInstance().getDatasetProviderList(datasetId, limit, offset, user);
   }
