@@ -3,7 +3,10 @@ package org.veupathdb.service.eda.common.plugin.util;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.InetSocketAddress;
+import java.net.URI;
 import java.net.URL;
+import java.nio.channels.SocketChannel;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -23,22 +26,39 @@ public class RServeClient {
   private static final Logger LOG = LogManager.getLogger(RServeClient.class);
 
   public static void useRConnection(String rServeUrlStr, ConsumerWithException<RConnection> consumer) {
+    SocketChannel channel = null;
     RConnection c = null;
+    boolean connectionEstablished = false;
     try {
-      URL rServeUrl = new URL(rServeUrlStr);
-      LOG.info("Connecting to RServe at " + rServeUrlStr);
-      c = new RConnection(rServeUrl.getHost(), rServeUrl.getPort());
+      channel = SocketChannel.open();
+      URL rServeUrl = new URI(rServeUrlStr).toURL();
+      LOG.info("Connecting to RServe at {}", rServeUrlStr);
+      channel.connect(new InetSocketAddress(rServeUrl.getHost(), rServeUrl.getPort()));
+      c = new RConnection(channel.socket());
       LOG.info("Connection established");
+      connectionEstablished = true;
       consumer.accept(c);
     }
     catch (Exception e) {
+      if (connectionEstablished) {
+        // successfully established connection to R; assume any further error is
+        // due to bad data selection and throw 400
+        //
+        // NOTE: when the useRConnection method is called from the context of a
+        // compute job, the user will not get a 400, they will instead see their
+        // compute as failed.
+        throw new BadRequestException(e.getMessage());
+      }
+      // otherwise throw 500 with generic message
       throw e instanceof RuntimeException ? (RuntimeException)e :
-          new RuntimeException("Unable to complete processing", e);
+        new RuntimeException("Unable to complete processing", e);
     }
     finally {
       if (c != null) {
         c.close();
       }
+      if (channel != null)
+        try { channel.close(); } catch (IOException e) { LOG.error("failed to close SocketChannel", e); }
     }
   }
 
@@ -51,7 +71,7 @@ public class RServeClient {
       List<String> filesTooBig = new ArrayList<>();
       try {
         for (RFileSetProcessor.RFileProcessingSpec spec : filesProcessor) {
-          LOG.info("Transferring data stream '" + spec.name + "' to RServe");
+          LOG.info("Transferring data stream '{}' to RServe", spec.name);
           RFileOutputStream dataset = connection.createFile(spec.name);
           IoUtil.transferStream(dataset, spec.stream);
           dataset.close();
@@ -65,7 +85,7 @@ public class RServeClient {
 
         // if any files too big, throw
         if (!filesTooBig.isEmpty()) {
-          LOG.info("Found the following results too large to process: " + String.join(", ", filesTooBig));
+          LOG.info("Found the following results too large to process: {}", String.join(", ", filesTooBig));
           throw new BadRequestException("Result is too large for this visualization to display.");
         }
         // all files written and (possibly) validated; consumer may now use them in its RServe call
@@ -96,10 +116,10 @@ public class RServeClient {
         // this is an estimate at best. the allVariables option isnt consistent across vizs
         // but its also the worst case estimate so thats something i guess...
         numPlottableRows = connection.eval("nrow("+ name + ")").asInteger();
-      } else {  
+      } else {
         numPlottableRows = connection.eval("sum(complete.cases("+ name + "))").asInteger();
       }
-        LOG.info("R found " + numPlottableRows + " plottable rows in file " + name);
+      LOG.info("R found {} plottable rows in file {}", numPlottableRows, name);
       if (numPlottableRows > maxRows) {
         filesTooBig.add(name);
       }
@@ -110,7 +130,7 @@ public class RServeClient {
   }
 
   public static void streamResult(RConnection connection, String cmd, OutputStream out)
-      throws RserveException, REXPMismatchException, IOException {
+  throws RserveException, REXPMismatchException, IOException {
     String outFile = connection.eval(cmd).asString();
     try (RFileInputStream response = connection.openFile(outFile)) {
       IoUtil.transferStream(out, response);
