@@ -11,6 +11,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.veupathdb.service.eda.generated.model.File;
@@ -20,7 +21,8 @@ public class FileStore {
   private static final Logger LOG = LogManager.getLogger(FileStore.class);
 
   // map from dataset hash -> (map from release dir -> (map from file name -> File>))
-  private static class MetadataMap extends HashMap<String, Map<String, Map<String, FileInfo>>> { }
+  private static class MetadataMap extends HashMap<String, Map<String, Map<String, FileInfo>>> {}
+
   private final MetadataMap _metadata;
 
   public FileStore(Path projectDir) {
@@ -29,50 +31,49 @@ public class FileStore {
 
   public Optional<List<String>> getReleaseNames(String datasetHash) {
     return Optional.ofNullable(_metadata.get(datasetHash))
-        .map(map -> new ArrayList<>(map.keySet()));
+      .map(map -> new ArrayList<>(map.keySet()));
   }
 
   public Optional<List<File>> getFiles(String datasetHash, String release) {
     return Optional.ofNullable(_metadata.get(datasetHash))
-        .flatMap(releaseMap -> Optional.ofNullable(releaseMap.get(release))
-            .map(fileMap -> new ArrayList<>(fileMap.values())));
+      .flatMap(releaseMap -> Optional.ofNullable(releaseMap.get(release))
+        .map(fileMap -> new ArrayList<>(fileMap.values())));
   }
 
   public Optional<Path> getFilePath(String datasetHash, String release, String fileName) {
     return Optional.ofNullable(_metadata.get(datasetHash))
-        .flatMap(releaseMap -> Optional.ofNullable(releaseMap.get(release))
-            .flatMap(fileMap -> Optional.ofNullable(fileMap.get(fileName))
-                .map(FileInfo::getPath)));
+      .flatMap(releaseMap -> Optional.ofNullable(releaseMap.get(release))
+        .flatMap(fileMap -> Optional.ofNullable(fileMap.get(fileName))
+          .map(FileInfo::getPath)));
   }
 
   private static MetadataMap init(Path projectDir) {
     try {
-      LOG.info("Initializing file store at project dir: " + projectDir.toAbsolutePath());
+      LOG.info("Initializing file store at project dir: {}", projectDir.toAbsolutePath());
       MetadataMap datasetMap = new MetadataMap();
       for (Path releaseDir : getContents(projectDir, FileStore::isDirectory)) {
         for (Path datasetHashDir : getContents(releaseDir, FileStore::isDirectory)) {
 
           // build map of files for this dataset+release combo
           Map<String, FileInfo> files = getContents(datasetHashDir, BasicFileAttributes::isRegularFile)
-              .stream().map(FileInfo::new).collect(Collectors.toMap(FileInfo::getName, f -> f));
+            .stream().map(FileInfo::new).collect(Collectors.toMap(FileInfo::getName, f -> f));
 
           // create an entry for this dataset if not already present
           Map<String, Map<String, FileInfo>> studyReleases = datasetMap.computeIfAbsent(
-              datasetHashDir.getFileName().toString(),
-              key -> new HashMap<>());
+            datasetHashDir.getFileName().toString(),
+            key -> new HashMap<>()
+          );
 
           // add file listing for this release
           studyReleases.put(releaseDir.getFileName().toString(), files);
         }
       }
       return datasetMap;
-    }
-    catch (IOException e) {
-      LOG.error("[IO] Unable to initialize FileStore for project dir " + projectDir.toAbsolutePath(), e);
+    } catch (IOException e) {
+      LOG.error("[IO] Unable to initialize FileStore for project dir {}", projectDir.toAbsolutePath(), e);
       throw new RuntimeException("Unable to read filesystem contents", e);
-    }
-    catch (Exception e) {
-      LOG.error("[Gen] Unable to initialize FileStore for project dir " + projectDir.toAbsolutePath(), e);
+    } catch (Exception e) {
+      LOG.error("[Gen] Unable to initialize FileStore for project dir {}", projectDir.toAbsolutePath(), e);
       throw e;
     }
   }
@@ -82,7 +83,8 @@ public class FileStore {
   }
 
   private static List<Path> getContents(Path parentDir, Predicate<BasicFileAttributes> parameters) throws IOException {
-    return Files.find(parentDir, 1, (path, attrs) -> parameters.test(attrs)).collect(Collectors.toList());
+    //noinspection resource
+    return Files.find(parentDir, 1, (path, attrs) -> parameters.test(attrs)).toList();
   }
 
 }
